--- a/index.html
+++ b/index.html
@@ -5,14 +5,347 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Konstruct</title>
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
+  <header class="main-header">
+    <section class="section-hero">
+      <div class="container">
 
+        <div class="section-hero__content flex">
+          <div class="section-hero__logo">
+            <img src="images/projeco-logo.svg" alt="Konstruct logo" class="section-hero__logo-image">
+          </div>
+          <h1 class="site-title">
+            partner with construct
+          </h1>
+          <p class="section-hero__descr">
+            An award-winning construction management firm
+          </p>
+          <button id="down" class="section-hero__down btn-reset">
+            scroll&nbsp;down
+          </button>
+        </div>
+
+
+      </div>
+    </section>
+    <div class="navbar">
+      <div class="container">
+        <nav class="main-header__nav flex">
+          <div class="main-header__nav-logo">
+            <a href="#" class="main-header__nav-logo-link">
+              <img src="images/projeco-logo-black.svg" alt="Konstruct logo" class="main-header__nav-logo-image">
+            </a>
+          </div>
+
+          <ul class="main-header__list list-reset flex">
+            <li class="main-header__item">
+              <a href="#" class="main-header__link">
+                home
+              </a>
+            </li>
+            <li class="main-header__item">
+              <a href="#" class="main-header__link">
+                about us
+              </a>
+            </li>
+            <li class="main-header__item">
+              <a href="#" class="main-header__link">
+                services
+              </a>
+            </li>
+            <li class="main-header__item">
+              <a href="" class="main-header__link">
+                work
+              </a>
+            </li>
+            <li class="main-header__item">
+              <a href="#" class="main-header__link">
+                contacts
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+
+    </div>
+  </header>
+  <main class="site-main">
+    <section class="site-section section-about">
+      <div class="container">
+        <header class="section-about__header flex">
+          <h2 class="site-cection__title section-about__title">
+            our story
+          </h2>
+        </header>
+
+        <div class="section-about__content flex">
+          <div class="section-about__block section-about__block_left">
+            <strong class="section-about__strong">
+              Founded in&nbsp;2011 by&nbsp;John Mathew <br> Smith,&nbsp;<a href="#"
+                class="section-about__link">Konstruct </a> has become the
+              number one construction management firm
+            </strong>
+            <p class="section-text section-about__text">
+              Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut
+              laoreet
+              dolore magna aliquam erat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
+              euismod tincidunt ut laoreet dolore magna aliquam erat.
+            </p>
+          </div>
+          <div class="section-about__block section-about__block_right flex">
+            <div class="section-about__previev section-about__previev_1">
+              <a href="#" class="section-about__preview-link">
+                we plan
+              </a>
+            </div>
+            <div class="section-about__previev section-about__previev_2">
+              <a href="#" class="section-about__preview-link">
+                we manage
+              </a>
+            </div>
+            <div class="section-about__previev section-about__previev_3">
+              <a href="#" class="section-about__preview-link">
+                we build
+              </a>
+            </div>
+
+          </div>
+
+        </div>
+      </div>
+    </section>
+    <section class="site-section section-services">
+      <div class="container">
+        <header class="section-services_header flex">
+          <h2 class="site-cection__title  section-services__title">our&nbsp;capabilities</h2>
+          <div class="section-services__header-content">
+            <p class="section-text section-sevices__top-text">
+              Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut
+              laoreet
+              dolore magna aliquam erat.
+            </p>
+          </div>
+
+          <button class="btn btn-reset section-services__btn">
+            all&nbsp;services
+          </button>
+        </header>
+        <div class="section-services__content flex">
+          <article class="section-services__article section-services__article_1">
+            <h3 class="section-services__article-title">
+              project and construction management
+            </h3>
+            <p class="section-services__article-text">
+              Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut
+              laoreet
+              dolore magna aliquam erat.
+            </p>
+          </article>
+          <article class="section-services__article section-services__article_2">
+            <h3 class="section-services__article-title">
+              structure and maintenance
+            </h3>
+            <p class="section-services__article-text">
+              Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut
+              laoreet
+              dolore magna aliquam erat.
+            </p>
+          </article>
+          <article class="section-services__article section-services__article_3">
+            <h3 class="section-services__article-title">
+              factory construction and modeling
+            </h3>
+            <p class="section-services__article-text">
+              Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut
+              laoreet
+              dolore magna aliquam erat.
+            </p>
+          </article>
+        </div>
+
+      </div>
+
+    </section>
+  </main>
+  <footer class="site-footer">
+    <section class="site-footer__section section-work">
+
+      <div class="container">
+        <div class="section-work__content flex">
+          <h2 class="section-work__title">Want to build <br> someting amazing?</h2>
+          <button class="btn btn-reset section-work__btn">
+            get&nbsp;in&nbsp;touch
+          </button>
+        </div>
+
+      </div>
+
+
+    </section>
+    <section class="site-footer__section section-signup">
+      <div class="container">
+        <div class="section-signup__content flex">
+          <h2 class="section-signup__title">
+            Newsletter Signup
+          </h2>
+          <form action="https://jsonplaceholder.typicode.com/posts" class="signup-form flex" method="post">
+            <input class="signup-form__input" type="email" name="email" id="email" placeholder="E-mai" required>
+            <button type="submit" class="btn btn-reset signup-form__btn">
+              signup
+            </button>
+          </form>
+        </div>
+
+      </div>
+      <!------------/container-------------->
+
+    </section>
+    <section class="site-footer__section footer-content">
+
+      <div class="container flex">
+        <div class="footer-content__block footer-content__block_1">
+          <h3 class="footer-content__title">
+            company
+          </h3>
+          <a href="#" class="foooter-logo">
+            <img src="images/projeco-logo.svg" alt="Construct logo" class="footer-logo__img">
+          </a>
+          <p class="footer-content__text">
+            Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet
+            dolore magna aliquam erat.
+          </p>
+
+        </div>
+        <div class="footer-content__block footer-content__block_2">
+          <h3 class="footer-content__title">
+            links
+          </h3>
+          <ul class="footer-content__list list-reset col-2">
+            <li class="footer-content__item">
+              <a href="" class="footer-content__link">
+                home
+              </a>
+            </li>
+            <li class="footer-content__item">
+              <a href="" class="footer-content__link">
+                about
+              </a>
+            </li>
+            <li class="footer-content__item">
+              <a href="" class="footer-content__link">
+                services
+              </a>
+            </li>
+            <li class="footer-content__item">
+              <a href="" class="footer-content__link">
+                projects
+              </a>
+            </li>
+            <li class="footer-content__item">
+              <a href="" class="footer-content__link">
+                contact us
+              </a>
+            </li>
+            <li class="footer-content__item">
+              <a href="" class="footer-content__link">
+                faq
+              </a>
+            </li>
+            <li class="footer-content__item">
+              <a href="" class="footer-content__link">
+                terms
+              </a>
+            </li>
+            <li class="footer-content__item">
+              <a href="" class="footer-content__link">
+                careers
+              </a>
+            </li>
+            <li class="footer-content__item">
+              <a href="" class="footer-content__link">
+                blog
+              </a>
+            </li>
+            <li class="footer-content__item">
+              <a href="" class="footer-content__link">
+                partners
+              </a>
+            </li>
+            <li class="footer-content__item">
+              <a href="" class="footer-content__link">
+                news
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer-content__block footer-content__block_3">
+          <h3 class="footer-content__title">
+            contact us
+          </h3>
+          <div class="flex">
+            <address class="footer-content__addres">
+              <p class="footer-content__addres-text">
+                213 Baker Street&nbsp;Oriel City Kounty<br>7000&nbsp;KNW,<br> Country Name
+              </p>
+              <a class="footer-content__addres-link" href="tel:+239942334022">
+                +23&nbsp;994&nbsp;233 4022
+              </a>
+              <a class="footer-content__addres-link" href="mailto:info@konstruct.com">
+                info@konstruct.com
+              </a>
+            </address>
+            <ul class="footer-content__social-list list-reset flex">
+              <li class="social-item">
+                <a href="#" class="social-item__link social-item__link_facebook">
+                 </a>
+              </li>
+              <li class="social-item">
+                <a href="#" class="social-item__link social-item__link_instagram">
+                 </a>
+              </li>
+              <li class="social-item">
+                <a href="#" class="social-item__link social-item__link_twitter">
+                </a>
+              </li>
+              <li class="social-item">
+                <a href="#" class="social-item__link social-item__link_youtube">
+                </a>
+              </li>
+              <li class="social-item">
+                <a href="#" class="social-item__link social-item__link_linkedin">
+                </a>
+              </li>
+            </ul>
+          </div>
+
+        </div>
+
+
+      </div>
+      <!-----------/container------------->
+
+    </section>
+
+    <div class="site-footer__bottom">
+      <div class="container">
+        <div class="site-footer__bottom-content flex">
+          <small class="site-footer__copy">
+            &copy;&nbsp;2022 Konstruct Inc. Website development by&nbsp;Andrey Baev
+          </small>
+        </div>
+
+      </div>
+
+    </div>
+  </footer>
+  <script src="js/jquery-3.6.1.min.js"></script>
   <script src="js/main.js"></script>
+
 </body>
 
 </html>
