--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <section class="site-section section-about">
       <div class="container">
         <header class="section-about__header flex">
-          <h2 class="site-cection__title section-about__title">
+          <h2 class="site-section__title section-about__title">
             our story
           </h2>
         </header>
@@ -121,10 +121,10 @@
     </section>
     <section class="site-section section-services">
       <div class="container">
-        <header class="section-services_header flex">
-          <h2 class="site-cection__title  section-services__title">our&nbsp;capabilities</h2>
+        <header class="section-services__header flex">
+          <h2 class="site-section__title  section-services__title">our&nbsp;capabilities</h2>
           <div class="section-services__header-content">
-            <p class="section-text section-sevices__top-text">
+            <p class="section-text section-services__top-text">
               Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut
               laoreet
               dolore magna aliquam erat.
@@ -212,7 +212,7 @@
           <h3 class="footer-content__title">
             company
           </h3>
-          <a href="#" class="foooter-logo">
+          <a href="#" class="footer-logo">
             <img src="images/projeco-logo.svg" alt="Construct logo" class="footer-logo__img">
           </a>
           <p class="footer-content__text">
@@ -302,11 +302,11 @@
             <ul class="footer-content__social-list list-reset flex">
               <li class="social-item">
                 <a href="#" class="social-item__link social-item__link_facebook">
-                 </a>
+                </a>
               </li>
               <li class="social-item">
                 <a href="#" class="social-item__link social-item__link_instagram">
-                 </a>
+                </a>
               </li>
               <li class="social-item">
                 <a href="#" class="social-item__link social-item__link_twitter">
